Feat: 방 조회 및 생성 기능 구현