@@ -2,7 +2,6 @@ package org.quipu.battleground.service;
 
 import lombok.RequiredArgsConstructor;
 import org.quipu.battleground.dto.room.RoomCreateRequestDto;
-import org.quipu.battleground.dto.room.RoomCreateResponseDto;
 import org.quipu.battleground.dto.room.RoomDto;
 import org.quipu.battleground.entity.Room;
 import org.quipu.battleground.repository.RoomRepository;
@@ -10,7 +9,6 @@ import org.quipu.battleground.util.RoomStatus;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -20,17 +18,20 @@ public class RoomService {
     public List<RoomDto> getRooms() {
         return roomRepository.findAll().stream()
                 .map(Room::toDto)
-                .collect(Collectors.toList());
+                .toList();
     }
 
-    public RoomCreateResponseDto createRoom(RoomCreateRequestDto dto) {
-        roomRepository.save(
-                new Room().builder()
-                        .title(dto.getTitle())
-                        .hostId(dto.getHostId())
-                        .maxUsers(dto.getMaxUsers())
-                        .currentUsers(dto.getCurrentUsers())
-                        .status(new RoomStatus("WAITING"))
-        );
+    public RoomDto createRoom(RoomCreateRequestDto dto) {
+        Room newRoom = Room.builder()
+                .title(dto.getTitle())
+                .hostId(dto.getHostId())
+                .maxUsers(dto.getMaxUsers())
+                .currentUsers(dto.getCurrentUsers())
+                .status(RoomStatus.WAITING)
+                .build();
+
+        Room room = roomRepository.save(newRoom);
+
+        return room.toDto();
     }
 }
